<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RechercheActivity">


    <TextView
        android:id="@+id/nomApp"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:text="@string/app_name" />


    <ImageView
        android:id="@+id/LogoOffice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_office" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_recherche_prod"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="nom" />

        <EditText
            android:id="@+id/et_reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="reference" />

    </LinearLayout>


    <Button
        android:id="@+id/b_rechercher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_btn_rechercher" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_resultat_recherche"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_resultat"
        android:layout_width="match_parent"
        android:layout_height="180dp" />



</LinearLayout>






