<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainAjout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AjoutActivity">





    <TextView
        android:id="@+id/nomApp"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:text="@string/app_name" />


    <ImageView
        android:id="@+id/LogoOffice"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        app:srcCompat="@drawable/logo_office" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_nouveau_produit"
        android:textSize="18sp" />




    <EditText
        android:id="@+id/et_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="reference"/>





    <EditText
        android:id="@+id/et_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="nom"/>




    <EditText
        android:id="@+id/et_prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="prix"/>




    <Button
        android:id="@+id/b_enregistrer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_btn_enregistrer" />




</LinearLayout>

































